fixed bugs - blanks spacing bug, victory phrase bug

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,12 @@ body {
     justify-content: space-evenly;
 }
 
+#agi-progress > img {
+    width: 459px;
+    height: 461px;
+    /* make victory image match width and height of other imgs */
+}
+
 #score-counter {
     display: flex;
     justify-content: center;
@@ -38,6 +44,7 @@ body {
     font-size: 2.2rem;
     padding: 3rem;
     color: white;
+    white-space: pre;
 }
 
 #bottom {
